--- a/css/slider_auto.css
+++ b/css/slider_auto.css
@@ -1,70 +1,1 @@
-* {
-  margin: 0;
-  padding: 0;
-}
-
-.swiper-body {
-
-  overflow: hidden;
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 14px;
-  color: #000;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  min-height: 100vh;
-}
-
-.swiper-container {
-  top margin-top: -500px;
-  width: 400px;
-  height: 400px;
-  padding-top: 0;
-  padding-bottom: 50px;
-  border-radius: 15px;
-}
-
-.swiper-slide {
-  border-radius: 15px;
-  background-position: center;
-  background-size: cover;
-  width: 500px;
-  height: 500px;
-  background: #000;
-  -webkit-box-reflect: below 0.2px
-    linear-gradient(transparent, transparent, #0005);
-}
-
-.swiper-slide img {
-  box-shadow: #3decdd 0px 0px 10px;
-  border-radius: 15px;
-  display: block;
-  width: 100%;
-}
-
-
-
-@media screen and (max-width: 1024px) {
-  .swiper-body {
-    overflow: hidden;
-    /* min-height: 100vh; */
-    margin-top: -100px;
-  }
-  .swiper-container {
-    width: 350px;
-    /* height: 200px; */
-    padding-bottom: 50px;
-    border-radius: 15px;
-  }
-  .swiper-slide {
-    border-radius: 15px;
-    background-position: center;
-    background-size: cover;
-    width: 100%;
-    height: 100%;
-    background: #000;
-    -webkit-box-reflect: below 0.2px
-      linear-gradient(transparent, transparent, #0005);
-  }
-  
-}
+* { margin: 0; padding: 0; } .swiper-body { overflow: hidden; font-family: Arial, Helvetica, sans-serif; font-size: 14px; color: #000; display: flex; justify-content: center; align-items: center; min-height: 100vh; } .swiper-container { margin-top: -200px; width: 400px; height: 400px; padding-top: 0; padding-bottom: 50px; border-radius: 15px; } .swiper-slide { border-radius: 15px; background-position: center; background-size: cover; width: 500px; height: 500px; background: #000; -webkit-box-reflect: below 0.2px linear-gradient(transparent, transparent, #0005); } .swiper-slide img { box-shadow: #3decdd 0px 0px 10px; border-radius: 15px; display: block; width: 100%; } @media screen and (max-width: 1024px) { .swiper-body { overflow: hidden; /* min-height: 100vh; */ margin-top: -100px; } .swiper-container { width: 350px; /* height: 200px; */ padding-bottom: 50px; border-radius: 15px; } .swiper-slide { border-radius: 15px; background-position: center; background-size: cover; width: 100%; height: 100%; background: #000; -webkit-box-reflect: below 0.2px linear-gradient(transparent, transparent, #0005); } }
